--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mixam</groupId>
-    <artifactId>mxjdf</artifactId>
-    <version>3.08.04</version>
+    <artifactId>mxjdf4</artifactId>
+    <version>4.01.01</version>
     <name>Mixam Job Description Format</name>
     <packaging>jar</packaging>
 
 
     <properties>
         <java-version>1.8</java-version>
-        <org.codehaus.jackson-version>2.9.9</org.codehaus.jackson-version>
+        <org.codehaus.jackson-version>2.11.0</org.codehaus.jackson-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -57,6 +57,7 @@
             </plugin>
 
         </plugins>
+        <finalName>mxjdf4</finalName>
     </build>
 
 </project>
