--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.mixam</groupId>
     <artifactId>mxjdf4</artifactId>
-    <version>4.01.05</version>
+    <version>4.1.6-SNAPSHOT</version>
     <name>Mixam Job Description Format</name>
     <packaging>jar</packaging>
 
@@ -43,6 +43,7 @@
     </dependencies>
 
     <build>
+        <finalName>mxjdf4</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -75,8 +76,12 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.0.0-M1</version>
+            </plugin>
         </plugins>
-        <finalName>mxjdf4</finalName>
     </build>
 
 </project>
