feat(proofs): inclide standard implementation metadata in the JAR manifest so that MxJdf version can be set automatically in mixam-shop

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,17 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.0</version>
+                <!--
+                 | Include version metadata in the archive so we can satisfy the
+                 | 'version' of the MxJdf spec automatically.
+                 +-->
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                        </manifest>
+                    </archive>
+                </configuration>
             </plugin>
 
             <plugin>
