--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mixam</groupId>
     <artifactId>mxjdf4</artifactId>
-    <version>4.1.6-SNAPSHOT</version>
+    <version>4.1.6</version>
     <name>Mixam Job Description Format</name>
     <packaging>jar</packaging>
 
@@ -12,7 +11,7 @@
         <connection>scm:git:https://github.com/mixam-platform/MxJdf4.git</connection>
         <developerConnection>scm:git:https://github.com/mixam-platform/MxJdf4.git</developerConnection>
         <url>https://github.com/mixam-platform/MxJdf4.git</url>
-        <tag>HEAD</tag>
+        <tag>mxjdf4-4.1.6</tag>
     </scm>
 
     <distributionManagement>
