--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.mixam</groupId>
     <artifactId>mxjdf4</artifactId>
-    <version>4.1.15</version>
+    <version>4.1.16-SNAPSHOT</version>
     <name>Mixam Job Description Format</name>
     <packaging>jar</packaging>
 
@@ -11,7 +11,7 @@
         <connection>scm:git:git@github.com:mixam-platform/MxJdf4.git</connection>
         <developerConnection>scm:git:git@github.com:mixam-platform/MxJdf4.git</developerConnection>
         <url>https://github.com/mixam-platform/MxJdf4.git</url>
-        <tag>mxjdf4-4.1.15</tag>
+        <tag>mxjdf4-4.1.11</tag>
     </scm>
 
     <distributionManagement>
