Updated developer scm connection string in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <scm>
         <connection>scm:git:https://github.com/mixam-platform/MxJdf4.git</connection>
-        <developerConnection>scm:git:git@github.com:mixam-platform/MxJdf4.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/mixam-platform/MxJdf4.git</developerConnection>
         <url>https://github.com/mixam-platform/MxJdf4.git</url>
     </scm>
 
